--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -44,11 +44,11 @@
             <div class="container">
                 <div class="text">
                     <h3>
-                        <span>Life long learning</span>
-                        <span>is essential to</span>
-                        <span>succeed nowadays</span>
+                        <span>I aspire to</span>
+                        <span>succeed in the</span>
+                        <span>financial sector</span>
                     </h3>
-                    <h5>It's crucial in the currently evolving job market.</h5>
+                    <h5>Numbers and economic fields are part of my passion.</h5>
                     <p>
                         Aspiring finance and accounting professional pursuing online 
                         bachelor's and master's degrees, with a focus on financial markets 
@@ -84,8 +84,8 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">UI Hochschule</span>
-                                <span class="white-2">Online Bachelor Degree in Finance</span>
+                                <span class="gray-1">IU Hochschule</span>
+                                <span class="white-2">Master Degree | Finance</span>
                                 <p>
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
@@ -98,7 +98,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">CFA Institute</span>
-                                <span class="white-2">Online Bachelor Degree in Finance</span>
+                                <span class="white-2">CFA | Certified Financial Analyst</span>
                                 <p>
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
@@ -118,35 +118,39 @@
 
                 <div class="column-list">
                     <div class="column-box">
-                        <span class="gray-1">Since 2024</span>
-                        <span class="white-2">Photo Editing</span>
-                        <p>
-                            
-                        </p>
+                        <ul>
+                            <li>
+                                <span class="gray-1">Entry-level</span>
+                                <span class="white-2">Accountant</span>
+                                <p>
+                                    I have interested in the field of accounting.
+                                </p>
+                            </li>
+                        </ul>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Since 2023</span>
-                        <span class="white-2">Web Development</span>
-                        <p>
-                            
-                        </p>
+                        <ul>
+                            <li>
+                                <span class="gray-1">Mid-level</span>
+                                <span class="white-2">Accountant</span>
+                                <p>
+                                    I have interested in the field of accounting.
+                                </p>
+                            </li>
+                        </ul>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Since 2022</span>
-                        <span class="white-2">Physical Exercise</span>
-                        <p>
-                            
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Since 2018</span>
-                        <span class="white-2">Graphic Design</span>
-                        <p>
-                            
-                        </p>
+                        <ul>
+                            <li>
+                                <span class="gray-1">Higher Position</span>
+                                <span class="white-2">Accountant</span>
+                                <p>
+                                    I have interested in the field of accounting.
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -175,13 +179,14 @@
                         <span>is essential to</span>
                         <span>succeed nowadays</span>
                     </h3>
-                    <h5>My problem-solving abilities enable me to address challenges methodically.</h5>
+                    <h5>It's crucial in the constant evolving job market</h5>
                     <p>
-                        My educational journey has endowed me with essential soft skills that are vital for professional 
-                        success. While I may not be the most socially adept, I excel in written communication, allowing me 
-                        to articulate ideas clearly. My problem-solving abilities enable me to address challenges with a 
-                        logical and strategic approach. Additionally, I am a quick learner, adaptable, and possess a strong 
-                        work ethic.
+                        From an early age, I've been captivated by the intricacies of finance and economics. 
+                        Whether exploring budgets, assisting with financial tasks, or collaborating on team 
+                        projects, I'm eager to apply my growing skills to real-world financial scenarios. My 
+                        high school education has given me a strong foundation in financial principles and 
+                        business management. I have a passion for finance, investment, and entrepreneurship, I am excited to contribute my skills 
+                        and enthusiasm to a forward-thinking financial team.
                     </p>
                 </div>
             </div>
@@ -278,30 +283,31 @@
     <div class="wrapper">
         <div class="container">
             <div class="flex-title">
-                <h2>Skills</h2>
-                <span class="title">Specialty</span>
+                <h2>Experience</h2>
+                <span class="title">Overview</span>
             </div>
         </div>
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/books.png" alt="pile of books">
+                <img src="/assets/img/pocket-watch.png" alt="pile of books">
             </div>
 
             <div class="container">
                 <div class="text">
                     <h3>
-                        <span>Life long learning</span>
-                        <span>is essential to</span>
-                        <span>succeed nowadays</span>
+                        <span>Leveraging internships</span>
+                        <span>to develop versatile</span>
+                        <span>skills across sectors</span>
                     </h3>
-                    <h5>My problem-solving abilities enable me to address challenges methodically.</h5>
+                    <h5>Building a strong foundation across diverse industries</h5>
                     <p>
-                        My educational journey has endowed me with essential soft skills that are vital for professional 
-                        success. While I may not be the most socially adept, I excel in written communication, allowing me 
-                        to articulate ideas clearly. My problem-solving abilities enable me to address challenges with a 
-                        logical and strategic approach. Additionally, I am a quick learner, adaptable, and possess a strong 
-                        work ethic.
+                        As a recent graduate, I've gained valuable skills through internships in diverse 
+                        industries. At a marble production company, I enhanced my organizational and 
+                        customer service abilities by assisting with sales and streamlining administrative 
+                        tasks. My pharmacy internship further developed my attention to detail and inventory 
+                        management skills. These experiences have given me a solid foundation in organization 
+                        and customer service, which I'm eager to apply in the finance industry.
                     </p>
                 </div>
             </div>
@@ -310,13 +316,13 @@
         <div class="two-columns">
             <div class="container">
                 <div class="flex-title">
-                    <h4>Certifications</h4>
-                    <span class="title-1">Awards</span>
+                    <h4>Lampertz Stone Designer</h4>
+                    <span class="title-1">2017</span>
                 </div>
                 <div class="column-list">
                     <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <span class="gray-1">Inf</span>
+                        <span class="white-2">Lampertz Stone Designer</span>
                         <p>
                             A distinction awarded to students with outstanding marks
                             and examplary behavior.
@@ -324,27 +330,15 @@
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">CNPSES & Chambre de Commerce</span>
-                        <span class="white-2">Academic Performance Certificate (GCC) 2024</span>
                         <p>
-                            Award for outstanding performance in Accounting, Business Economics & Political Economy which is awarded to only 40 Students in Luxembourg each year
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">2GCC | Deserving Student 2022/23</span>
-                        <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Jonk Entrepreneuren</span>
-                        <span class="white-2">Trendiction SA | Job Shadow Event 2024</span>
-                        <p>
-                            A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
+                            During my commerce studies, I interned at a marble stone fabricator, 
+                            gaining comprehensive knowledge of the marble industry. I assisted with sales 
+                            by interacting with customers, understanding their needs, and helping 
+                            them choose suitable marble products. Additionally, I observed the 
+                            installation process, learning about the technical and logistical aspects. 
+                            This experience deepened my understanding of various marble types, their 
+                            applications, and the craftsmanship involved, while also enhancing my 
+                            customer service and product selection skills.
                         </p>
                     </div>
                 </div>
