--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -316,12 +316,13 @@
         <div class="two-columns">
             <div class="container">
                 <div class="flex-title">
-                    <h4>Lampertz Stone Designer</h4>
+                    <h4>Marble Manufacturer</h4>
                     <span class="title-1">2017</span>
                 </div>
                 <div class="column-list">
                     <div class="column-box">
-                        <span class="gray-1">Inf</span>
+                        <img src="/assets/svg/lampertz-stone-designer-logo.svg" alt="Lampertz Logo">
+                        <span class="gray-1">Informational Internship</span>
                         <span class="white-2">Lampertz Stone Designer</span>
                         <p>
                             A distinction awarded to students with outstanding marks
@@ -346,40 +347,31 @@
 
             <div class="container">
                 <div class="flex-title">
-                    <h4>Leisure</h4>
-                    <span class="title-1">Hobbies</span>
+                    <h4>Pharmacy</h4>
+                    <span class="title-1">2016</span>
                 </div>
 
                 <div class="column-list">
                     <div class="column-box">
-                        <span class="gray-1">Since 2024</span>
-                        <span class="white-2">Photo Editing</span>
+                        <img src="/assets/svg/pharmacie-hosingen-logo.svg" alt="Pharmacie Hosingen Logo">
+                        <span class="gray-1">Information Internship</span>
+                        <span class="white-2">Lampertz Stone Designer</span>
                         <p>
-                            
+                            A distinction awarded to students with outstanding marks
+                            and examplary behavior.
                         </p>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Since 2023</span>
-                        <span class="white-2">Web Development</span>
                         <p>
-                            
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Since 2022</span>
-                        <span class="white-2">Physical Exercise</span>
-                        <p>
-                            
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Since 2018</span>
-                        <span class="white-2">Graphic Design</span>
-                        <p>
-                            
+                            During my commerce studies, I interned at a local pharmacy, gaining invaluable 
+                            hands-on experience. I was actively involved in daily operations, particularly 
+                            in inventory management, ensuring medications and supplies were stocked and 
+                            organized. This included conducting inventory checks, managing stock levels, 
+                            and reordering products as needed. I also supported the pharmacy staff in 
+                            maintaining records and organizing storage areas. This experience enhanced 
+                            my understanding of inventory control processes, improved my organizational 
+                            skills, and provided insights into pharmacy operations.
                         </p>
                     </div>
                 </div>
@@ -430,7 +422,7 @@
                 <div class="column-list">
                     <div class="column-box">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <span class="white-2">Accordion </span>
                         <p>
                             A distinction awarded to students with outstanding marks
                             and examplary behavior.
@@ -473,7 +465,7 @@
                 <div class="column-list">
                     <div class="column-box">
                         <span class="gray-1">Since 2024</span>
-                        <span class="white-2">Photo Editing</span>
+                        <span class="white-2">Soft skills then different apps below with tooltip</span>
                         <p>
                             
                         </p>
