--- a/public/css/base.css
+++ b/public/css/base.css
@@ -16,6 +16,10 @@ body {
     color: white;
 }
 
+img {
+    user-select: none;
+}
+
 /***Fonts******/
 h1 { font-weight: 900;}
 h4 { font-weight: 500;}
