--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -48,7 +48,7 @@
                         <span>succeed in the</span>
                         <span>financial sector</span>
                     </h3>
-                    <h5>Numbers and economic fields are part of my passion.</h5>
+                    <h5>Numbers and economic fields are something I am passionate about</h5>
                     <p>
                         Aspiring finance and accounting professional pursuing online 
                         bachelor's and master's degrees, with a focus on financial markets 
@@ -76,7 +76,7 @@
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
                                 </p>
-                                
+                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -90,6 +90,7 @@
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
                                 </p>
+                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -103,7 +104,7 @@
                                     A distinction awarded to students with outstanding marks
                                     and examplary behavior.
                                 </p>
-                                <a href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org</a>
+                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -179,7 +180,7 @@
                         <span>is essential to</span>
                         <span>succeed nowadays</span>
                     </h3>
-                    <h5>It's crucial in the constant evolving job market</h5>
+                    <h5>In the constantly evolving job market, it's vital</h5>
                     <p>
                         From an early age, I've been captivated by the intricacies of finance and economics. 
                         Whether exploring budgets, assisting with financial tasks, or collaborating on team 
@@ -232,10 +233,174 @@
                             A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
                         </p>
                     </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
+                        <span class="white-2">Aktiv Plang | Project 'Study' 2022/23</span>
+                        <p>
+                            Rewarded to students for their regular use of the library, a quiet place to do homework and research. 
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Jonk Entrepreneuren</span>
+                        <span class="white-2">CLIK Marketing | Mini-Entreprise 2023</span>
+                        <p>
+                            A programm that allowed Luxembourgish high school students to run a small company for a year, developing their entrepreneurial spirit and skills.
+                        </p>
+                    </div>
                 </div>
             </div>
 
             <div class="container">
+                <div class="flex-title">
+                    <h4>Institution</h4>
+                    <span class="title-1">High School</span>
+                </div>
+
+                <div class="column-list">
+                    <div class="column-box">
+                        <img src="/assets/svg/ltett-logo.svg" alt="Ltett logo">
+                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
+                        <span class="white-2">Division of Commerce and Administration</span>
+                        <span class="white-3">4GCM, 3GCM, 2GCC & 1GCC</span>
+                        <a href="https://www.ltett.lu/" class="normal-link" target="_blank">www.ltett.lu<img src="/assets/svg/link.svg" alt=""></a>
+                        <p>
+                            <b>Graduated:</b> 6 July 2024
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion">
+                            <div class="accordion-item">
+                                <span class="gray-1">Relevant Coursework</span>
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Business Economics
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    The “business economics” course encourages pupils to understand and 
+                                    interpret the economic, legal, fiscal, financial, and social choices 
+                                    companies make, and to subject them to critical consideration. Pupils
+                                     are prepared to make decisions themselves on the assets of natural 
+                                     and legal persons, taking into account legal, economic, fiscal, 
+                                     financial, and social aspects.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Political Economy
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    The course on “political economy” encourages pupils to recognize and use 
+                                    economic language to explain economic mechanisms, issues, and contemporary 
+                                    problems from the viewpoint of various economic stakeholders.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Accountancy
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    The “accounting” course encourages pupils to acquire the essential rules 
+                                    governing accounting techniques, enabling them to compile, audit, and 
+                                    check a company's accounts.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Professional Communication and human relations
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    The course on “professional communication and human relations” encourages pupils 
+                                    to acquire knowledge and skills specific to professional communication so they 
+                                    can autonomously use and adapt them to situations in working life, incorporating 
+                                    language skills (French, German, English). Additionally, the pupils are able to 
+                                    write commercial letters of any kind.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Organisation and Office Management
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    The course on “organisation and management of activities” encourages pupils to 
+                                    discover and implement varied techniques for organization and management, making 
+                                    good use of technological resources to develop their ability to work and assist 
+                                    others in organizational tasks.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline:  Information and Communication Technologies
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    The aim of the course on “information and communication technologies” is to study 
+                                    the functioning of software that enables an organization (company, administration, 
+                                    or association) to manage and communicate its data. It prepares pupils for working 
+                                    life and higher studies.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline:  Knowledge of the Contemporary World
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    Content for header 2.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Political Economy
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    Content for header 2.
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <button class="accordion-header" aria-expanded="false">
+                                    Discipline: Political Economy
+                                </button>
+
+                                <div class="accordion-content" hidden>
+                                    Content for header 2.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Since 2022</span>
+                        <span class="white-2">Physical Exercise</span>
+                        <p>
+                            
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Since 2018</span>
+                        <span class="white-2">Graphic Design</span>
+                        <p>
+                            
+                        </p>
+                    </div>
+                </div>
+
                 <div class="flex-title">
                     <h4>Leisure</h4>
                     <span class="title-1">Hobbies</span>
