--- a/public/css/components.css
+++ b/public/css/components.css
@@ -191,6 +191,21 @@ span { display: block; }
     background-repeat: no-repeat;
 }
 
+.normal-link {
+    color: white;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.normal-link img {
+    width: 1.2rem;
+    padding-left: 0.2rem;
+}
+
+.normal-link:hover { color: rgb(167, 167, 167); }
+.normal-link img:hover { color: rgb(167, 167, 167);}
+
 /** Education Section ***/
 .flex-title {
     display: flex;
