--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,6 @@
             <p>Copright - <%= new Date().getFullYear() %></p>
         </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
